--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -14,14 +15,24 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-jst": "~0.6.0",
     "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "passport": "^0.3.0",
+    "passport-facebook": "^2.0.0",
+    "passport-twitter": "^1.0.3",
     "rc": "~0.5.0",
+    "require-all": "^2.0.0",
     "sails": "~0.11.2",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-postgresql": "~0.10.16",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "sails-hook-autoreload": "~0.12.0"
   },
   "scripts": {
     "debug": "node debug app.js",
